<?xml version="1.0"?>
<package format="2">
    <name>fieldai_legged_perceptive_controllers</name>
    <version>0.0.0</version>
    <description>fieldai_legged_perceptive_controllers</description>
    <maintainer email="somboles@usc.edu">Mohsen Sombolestan</maintainer>
    <license>TODO</license>

    <!-- buildtool_depend: dependencies of the build process -->
    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>cmake_clang_tools</build_depend>
    <depend>roscpp</depend>
    <depend>controller_interface</depend>
    <depend>legged_perceptive_interface</depend>
    <depend>legged_controllers</depend>
    <depend>grid_map_ros</depend>
    <depend>ocs2_legged_robot_ros</depend>

    <export>
        <controller_interface plugin="${prefix}/legged_perceptive_controllers_plugins.xml"/>
    </export>
</package>
